discussion/kv_engine/170541/170541_rev17_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Remove tasks from custom cpuPool queue on unregister

We just need to clean up the task but we currently do so by
running it, meaning that we must wait for other tasks to
complete first. Instead, remove the tasks from the queue and
tidy them up manually.

Change-Id: Id3f52a07d693d98510ab6b3f918ad4beb1b8721d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-15 08:37:29.000000000
Message: 
Uploaded patch set 17: Patch Set 16 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-15 09:14:17.000000000
Message: 
Patch Set 17: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15622/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15622/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15622/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43936/ : FAILURE

Failure of GoogleTest "DurabilityRespondAmbiguousTest.RespondAmbiguousNotificationDeadLock":

<pre>
[ RUN      ] DurabilityRespondAmbiguousTest.RespondAmbiguousNotificationDeadLock
unknown file: error: C++ exception with description "cb::io::rmrf: stat of ep_engine_ep_unit_tests.db/test.189401 failed: The system cannot find the file specified." thrown in the test body.
[  FAILED  ] DurabilityRespondAmbiguousTest.RespondAmbiguousNotificationDeadLock (3514 ms)
DurabilityRespondAmbiguousTest.RespondAmbiguousNotificationDeadLock
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43936/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18402/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18402/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14464/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37049/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5270/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17371/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17672/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16439/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25769/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5331/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
